--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "globekit-public": "^1.0.6",
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
+    "paper": "^0.12.15",
     "pg": "^8.7.1"
   },
   "devDependencies": {
